--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,4 +1,6 @@
-<p>
-  Modify me in `app/views/homes/index.html.erb` or change the root directive in
-  `config/routes.rb`
-</p>
+<% if current_user %>
+<h1> Welcome <%= current_user.user_name %> </h1>
+<h3> What adventure do you wish to pursure?</h3>
+<h5> When you get brave....insert your react tiles here</h5>
+
+<% end %>
