--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,27 +4,34 @@
   <title>DMscreen</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <%= stylesheet_link_tag 'application', media: 'all' %>
-  
-    <%= javascript_include_tag "vendor/modernizr" %>
-  
+
+  <%= javascript_include_tag "vendor/modernizr" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-  
+
   <nav class="top-bar">
     <ul class="title-area">
       <li class="name">
-        <h1><a href="/">DMscreen</a></h1>
+        <h1><a href="/">DMscreen<span> ...dungeon mastering, made easy!</span></a></h1>
       </li>
     </ul>
 
     <section class="top-bar-section">
       <ul class="right">
-        <%- if current_user -%>
-          <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
+      <% if current_user %>
+      <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
+
+        <li class="has-dropdown" id="dropdown">
+          <a href="#"><%=current_user.user_name%></a>
+          <ul class="dropdown">
+            <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
+            <li><a href="#">Settings</a></li>
+          </ul>
+        </li>
         <%- else -%>
-          <li><%= link_to 'Sign Up', new_user_registration_path %></li>
-          <li><%= link_to 'Sign In', new_user_session_path %></li>
+        <li><%= link_to 'Sign Up', new_user_registration_path %></li>
+        <li><%= link_to 'Sign In', new_user_session_path %></li>
         <%- end -%>
       </ul>
     </section>
