created dungeon room migrations

--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -8,6 +8,9 @@
     <p> DM: <%= campaign.dm.user_name %><p>
     Players: <% campaign.pcs.each do |pc|%>
       <p><%= "#{pc.user.user_name} as: #{pc.name}" %></p>
+      <% if pc.avatar %>
+        <%= image_tag "#{pc.avatar}" %>
+      <% end %>
     <% end %>
 
   <% end %>
