WIP Router being antsy

--- a/app/views/dungeons/show.html.erb
+++ b/app/views/dungeons/show.html.erb
@@ -7,4 +7,4 @@
   <%= image_tag @dungeon.master_floor_plan %>
 </div>
 
-<%= link_to "FINALLY ENTER THE DUNGEON", dungeon_room_path(@dungeon.rooms.first.id) %>
+<%= link_to "FINALLY ENTER THE DUNGEON", room_show(2) %>
