--- a/app/views/pcs/index.html.erb
+++ b/app/views/pcs/index.html.erb
@@ -1,7 +1,2 @@
-<% if current_user %>
-<h1> Welcome <%= current_user.user_name %> </h1>
-<h3> What adventure do you wish to pursure?</h3>
-<h5> When you get brave....insert your react tiles here</h5>
-
-
-<% end %>
+<div id="app">
+</div>
