--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -10,3 +10,54 @@
   margin-bottom: 5px;
   overflow: hidden
 }
+
+
+.homes-screen-tiles{
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  border-radius: 5px;
+  margin: 25px;
+  border: 1px solid blue;
+  background-color: white;
+  padding: 5px;
+
+}
+
+
+.campaign-player-thumbs{
+border: 3px solid black;
+padding: 1px 1px;
+margin-top: 2px;
+}
+
+.dungeon-room-tile{
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  border-radius: 5px;
+  margin: 25px;
+  border: 1px solid blue;
+  background-color: white;
+  padding: 5px;
+}
+.adjacent-room-tile{
+  height:100px;
+  width: 100px;
+  float: left;
+  border: 3px solid black;
+  display: inline-flex;
+  margin: 5px;
+  overflow-x: hidden;
+  overflow-y: hidden;
+
+}
+
+.current-room-tile{
+
+  height:400px;
+  width: 400px;
+  border: 3px solid black;
+  object-fit: contain;
+  background-size: cover;
+}
