--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,9 @@
 
   <%= yield %>
 
+  <%= javascript_pack_tag 'application' %>
   <%= javascript_include_tag 'application' %>
+
   <%= yield :extra_footer %>
 </body>
 </html>
