punched up the room functionality

--- a/app/assets/stylesheets/image.css
+++ b/app/assets/stylesheets/image.css
@@ -13,6 +13,7 @@
 .pc-show-tile {
   height: 400px;
   width: 600px;
+  color: white;
   border: 5px solid yellow;
   border-radius: 4px;
   margin-right: 5px;
@@ -20,7 +21,10 @@
   padding: 1px;
   margin-top: 1px;
   margin-bottom: 1px;
-  overflow: hidden
+  overflow: hidden;
+  background-image: url(https://s3.amazonaws.com/dmscreen/site/Wood-Pattern.jpeg);
+  background-size: contain;
+
 }
 .pc-thumb {
   height: 200px;
