--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -8,7 +8,7 @@
   padding: 5px;
   margin-top: 5px;
   margin-bottom: 5px;
-  overflow: hidden
+  overflow: hidden;
 }
 
 
@@ -19,7 +19,6 @@
   border-radius: 5px;
   margin: 25px;
   border: 1px solid blue;
-  background-color: white;
   padding: 5px;
 
 }
@@ -29,6 +28,7 @@
 border: 3px solid black;
 padding: 1px 1px;
 margin-top: 2px;
+
 }
 
 .dungeon-room-tile{
@@ -40,6 +40,7 @@ margin-top: 2px;
   border: 1px solid blue;
   background-color: white;
   padding: 5px;
+  float: left;
 }
 .adjacent-room-tile{
   height:100px;
@@ -60,4 +61,17 @@ margin-top: 2px;
   border: 3px solid black;
   object-fit: contain;
   background-size: cover;
+/* float: left; */
+}
+
+.feature-tile{
+
+
+}
+
+.catagooory{
+  height:20px;
+  width: 40px;
+  background-color: white;
+  border: 2px solid black;
 }
