--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,8 @@
 <head>
   <title>DMscreen</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica|IM+Fell+DW+Pica+SC" rel="stylesheet">
   <%= stylesheet_link_tag 'application', media: 'all' %>
-
   <%= javascript_include_tag "vendor/modernizr" %>
   <%= csrf_meta_tags %>
 </head>
@@ -13,7 +13,7 @@
   <nav class="top-bar">
     <ul class="title-area">
       <li class="name">
-        <h1><a href="/">DMscreen<span> ...dungeon mastering, made easy!</span></a></h1>
+        <h1><a href="/">DMscreen<span> ...Dungeon Mastering, made easy!</span></a></h1>
       </li>
     </ul>
 
