--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -274,6 +274,7 @@ padding-right: 25px;
   max-width: fit-content;
   margin-top: 10px;
   margin-bottom: 10px;
+  padding-top: 15px;
 }
 
 .adjacent-rooms-title{
